tests/wormhole/sfpi/gold/warn_pop.txt
warn.cc: In function 'void popwithoutpush()':
warn.cc:78:5: error: '__builtin_riscv_sfppopc' was not declared in this scope; did you mean '__builtin_rvtt_wh_sfppopc'?
   78 |     __builtin_riscv_sfppopc();
      |     ^~~~~~~~~~~~~~~~~~~~~~~
      |     __builtin_rvtt_wh_sfppopc
